Database connection errors to be resolved

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "upload.js",
   "scripts": {
     "dev": "nodemon express_server.js",
-    "serve": "node express_server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serve": "node express_server.js"
+
   },
   "dependencies": {
     "accepts": "^1.3.8",
