--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGOURL="mongodb+srv://Database:SAIwamqriImM08m2@files-sharing-app.zxvar9p.mongodb.net/file-sharing-app?retryWrites=true&w=majority"
+APP_BASE_URL="https://localhost:5500/"
