--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGOURL="mongodb+srv://Database:SAIwamqriImM08m2@files-sharing-app.zxvar9p.mongodb.net/file-sharing-app?retryWrites=true&w=majority"
-APP_BASE_URL="http://localhost:5500"
+APP_BASE_URL=http://localhost:5500
+ALLOW_REQUEST=http://localhost:5500
